--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@expo/webpack-config": "^19.0.1",
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
